[package]
name = "my_esp32c3"
version = "0.1.0"
authors = ["longxiangam <longxiangam@163.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3 = "0.14.0"
hal = { package = "esp32c3-hal", version = "0.9.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32c3"] }
embedded-graphics = {version="0.7.1",features = ["fixed"]}

st7735-lcd = "0.9.0"
epd-waveshare = "0.5.0"
epd_custom={path="epd_custom"}


[workspace]
members = [
    "lcd1in8",
    "epd_custom"
]